--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "@react-three/drei": "^9.93.0",
+    "@react-three/fiber": "^8.15.13",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.6.1",
+    "maath": "^0.10.8",
     "p5": "^1.5.0",
     "react": "18.3.1",
     "react-bootstrap": "^1.6.4",
@@ -21,7 +24,7 @@
     "react-typist": "^2.0.5",
     "rsuite": "^4.8.2",
     "schema-utils": "^3.0.0",
-    "three": "^0.126.1"
+    "three": "^0.176.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -47,8 +50,18 @@
     ]
   },
   "devDependencies": {
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "@types/three": "^0.176.0",
+    "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.4",
     "gh-pages": "^3.1.0",
-    "prettier": "^2.2.1"
+    "postcss": "^8",
+    "prettier": "^2.2.1",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   },
   "homepage": "https://rafsanahmed.com"
 }
