--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "rafsan-ahmed",
-  "version": "0.1.0",
+  "version": "1.0.0",
+  "license": "MIT",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.3",
@@ -9,10 +10,9 @@
     "@react-three/fiber": "^8.15.13",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.6.1",
     "maath": "^0.10.8",
-    "p5": "^1.5.0",
+    "prop-types": "^15.8.1",
     "react": "18.3.1",
     "react-bootstrap": "^1.6.4",
     "react-dom": "18.3.1",
@@ -20,10 +20,8 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
-    "react-transition-group": "^4.4.1",
     "react-typist": "^2.0.5",
-    "rsuite": "^4.8.2",
-    "schema-utils": "^3.0.0",
+    "rsuite": "^5.80.2",
     "three": "^0.176.0"
   },
   "scripts": {
@@ -52,16 +50,12 @@
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
-    "@types/react-dom": "^18",
     "@types/three": "^0.176.0",
-    "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4",
+    "eslint-config-react-app": "^7.0.1",
     "gh-pages": "^3.1.0",
-    "postcss": "^8",
-    "prettier": "^2.2.1",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "webpack-cli": "^6.0.1"
   },
   "homepage": "https://rafsanahmed.com"
 }
