--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "name": "rafsan-ahmed",
+  "description": "Personal Website First Iteration",
+  "author": "Rafsan Ahmed <rafsanahmed2828@gmail.com>",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/rafsanahmed28/rafsan"},
   "version": "1.0.0",
   "license": "MIT",
   "private": true,
