--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-scripts": "^5.0.1",
     "react-typist": "^2.0.5",
     "rsuite": "^5.80.2",
+    "styled-components": "^6.1.18",
     "three": "^0.176.0"
   },
   "scripts": {
