--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-scripts": "^5.0.1",
     "react-typist": "^2.0.5",
     "rsuite": "^5.80.2",
-    "three": "^0.176.0"
+    "three": "^0.176.0",
+    "three-stdlib": "^2.36.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -33,9 +34,6 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -b master -d build"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
   },
   "browserslist": {
     "production": [
@@ -50,12 +48,8 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^18",
-    "@types/three": "^0.176.0",
-    "eslint": "^8",
-    "eslint-config-react-app": "^7.0.1",
     "gh-pages": "^3.1.0",
-    "typescript": "^5"
+    "prettier": "^3.5.3"
   },
   "homepage": "https://rafsanahmed.com"
 }
