UPDATE New Projects Section

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
+    "react-syntax-highlighter": "^15.6.1",
     "react-typist": "^2.0.5",
     "rsuite": "^5.80.2",
     "three": "^0.176.0",
