--- a/package.json
+++ b/package.json
@@ -10,24 +10,20 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.11.3",
-    "@react-three/drei": "^9.93.0",
     "@react-three/fiber": "^8.15.13",
     "bootstrap": "^4.6.1",
-    "maath": "^0.10.8",
     "prop-types": "^15.8.1",
     "react": "18.3.1",
     "react-bootstrap": "^1.6.4",
     "react-dom": "18.3.1",
+    "react-icons": "^5.5.0",
     "react-responsive": "^10.0.1",
-    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
     "react-syntax-highlighter": "^15.6.1",
     "react-typist": "^2.0.5",
     "rsuite": "^5.80.2",
-    "three": "^0.176.0",
-    "three-stdlib": "^2.36.0"
+    "three": "^0.176.0"
   },
   "scripts": {
     "start": "react-scripts start",
