--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rafsan-ahmed",
-  "description": "Personal Website First Iteration",
+  "description": "Rafsan Portfolio Website First Iteration",
   "author": "Rafsan Ahmed <rafsanahmed2828@gmail.com>",
   "repository": {
     "type": "git",
@@ -12,12 +12,10 @@
   "dependencies": {
     "@react-three/fiber": "^8.15.13",
     "bootstrap": "^4.6.1",
-    "prop-types": "^15.8.1",
     "react": "18.3.1",
     "react-bootstrap": "^1.6.4",
     "react-dom": "18.3.1",
     "react-icons": "^5.5.0",
-    "react-responsive": "^10.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
     "react-syntax-highlighter": "^15.6.1",
