--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-three/fiber": "^8.18.0",
     "bootstrap": "^4.6.1",
+    "chart.js": "^4.4.9",
     "gsap": "^3.13.0",
     "react": "18.3.1",
     "react-bootstrap": "^2.10.10",
