--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,13 +3,23 @@
   "name": "Rafsan Ahmed Portfolio",
   "icons": [
     {
-      "src": "logo.svg",
+      "src": "logo.png",
       "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/svg"
+      "type": "image/png"
+    },
+    {
+    "src": "logo192.png",
+    "sizes": "192x192",
+    "type": "image/png"
+    },
+    {
+      "src": "logo512.png",
+      "sizes": "512x512",
+      "type": "image/png"
     }
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#17322E",
-  "background_color": "#0d0716"
+  "theme_color": "#060a17",
+  "background_color": "#060a17"
 }
