Font Import Fixed

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -20,6 +20,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#060a17",
-  "background_color": "#060a17"
+  "theme_color": "#03141a",
+  "background_color": "#03141a"
 }
