--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,19 +3,19 @@
   "name": "Rafsan Ahmed Portfolio",
   "icons": [
     {
-      "src": "logo.png",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/png"
+      "src": "favicon.ico",
+      "sizes": "64x64",
+      "type": "image/x-icon"
     },
     {
-    "src": "logo192.png",
-    "sizes": "192x192",
-    "type": "image/png"
+      "src": "logo192.png",
+      "type": "image/png",
+      "sizes": "192x192"
     },
     {
       "src": "logo512.png",
-      "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "sizes": "512x512"
     }
   ],
   "start_url": ".",
