Add complete sai-siddartha portfolio

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Rafsan",
-  "name": "Rafsan Ahmed Portfolio",
+  "short_name": "Sai Siddartha",
+  "name": "Sai Siddartha Portfolio",
   "icons": [
     {
       "src": "favicon.ico",
