--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "rafsan-ahmed",
-  "description": "Rafsan Portfolio Website First Iteration",
-  "author": "Rafsan Ahmed <rafsanahmed2828@gmail.com>",
+  "name": "sai-siddartha",
+  "description": "Sai Siddartha portfolio Website First Iteration",
+  "author": "Sai Siddartha <mulikinati.siddu876@gmail.com>",
   "repository": {
     "type": "git",
-    "url": "https://github.com/rafsanahmed28/rafsan"
+    "url": "https://github.com/stevejobs27"
   },
   "version": "1.0.0",
   "license": "MIT",
@@ -46,5 +46,5 @@
     "gh-pages": "^3.1.0",
     "prettier": "^3.5.3"
   },
-  "homepage": "https://rafsanahmed.com"
+  "homepage": "https://saisiddartha.com"
 }
